create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -623,19 +623,13 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-t0amdiI2Fy {
-  padding-top: 90px;
+.cid-t1tgy0Jmql {
+  padding-top: 60px;
   padding-bottom: 30px;
-  background-color: #218104;
+  background-image: url("../../../assets/images/banner-soap-bars-compressed-2048x-676x197.jpg");
 }
-.cid-t0amdiI2Fy P {
-  color: #767676;
-}
-.cid-t0amdiI2Fy H1 {
-  color: #ffffff;
-}
-.cid-t0amdiI2Fy .mbr-text,
-.cid-t0amdiI2Fy .mbr-section-btn {
+.cid-t1tgy0Jmql .mbr-text,
+.cid-t1tgy0Jmql .mbr-section-btn {
   color: #ffee17;
 }
 .cid-sa1IOSVBKt {
